<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_theme"
        android:gravity="right" >

        <ImageView
            android:id="@+id/button_back"
            style="@style/back" />

        <TextView
            android:id="@+id/header"
            style="@style/header"
            android:background="@color/blue_theme"
            android:text="@string/add_note_header" />
    </LinearLayout>

    <LinearLayout 
        style="@style/frame_box"
        android:layout_marginTop="4dp" >

        <TextView
            android:id="@+id/title_box"
            style="@style/detail_text_box"
            android:text="@string/title_box" />

        <TextView
            android:id="@+id/title_value_box"
            style="@style/detail_value_box"
            android:text="@string/dummy" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/memo_text"
            style="@style/note_text_box"
            android:layout_marginTop="10dp"
            android:text="@string/add_note_content" />

        <android.support.v7.widget.Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/button_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dummy"
            android:src="@drawable/button_finish_flat" />
    </LinearLayout>

    <EditText
        android:id="@+id/note_edit_text"
        style="@style/note_value_box"
        android:layout_height="336dp"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:maxLength="511"
        android:paddingBottom="2dp"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:paddingTop="2dp" />

</LinearLayout>