<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white_back" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@color/blue_theme" >

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:text="@string/twitter_oauth"
            android:textSize="25sp"
            android:gravity="center" />

        <ImageView
            style="@style/tweet"
            android:contentDescription="@string/dummy" />
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:text="@string/start_oauth"
        android:textColor="@color/text_dark_gray"
        android:textSize="20sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        
        <ImageView
            android:id="@+id/button_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
        	android:scaleType="fitCenter"
        	android:src="@drawable/button_yes_flat"
        	android:contentDescription="@string/dummy" />
            
        <ImageView
            android:id="@+id/button_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
        	android:scaleType="fitCenter"
        	android:src="@drawable/button_no_flat"
        	android:contentDescription="@string/dummy" />
    </LinearLayout>
</LinearLayout>